--- a/solr/solr-ref-guide/src/numerical-analysis.adoc
+++ b/solr/solr-ref-guide/src/numerical-analysis.adoc
@@ -22,19 +22,16 @@ These three related topics are part of the wider field of numerical analysis.
 == Interpolation
 
 Interpolation is used to construct new data points between a set of known control of points.
-The ability to predict new data points allows for sampling along the curve defined by the
+The ability to *predict* new data points allows for *sampling* along the curve defined by the
 control points.
 
-The interpolation functions described below return a numeric
-array with the predicted values at the control points. Except for the `loess` function,
-which is a smoothing interpolator, the interpolation functions return a
-numeric array that actually contains the original control points. This is because
-interpolation functions predict curves that pass through the control points. At first glance
-this seems superflous, but there is more then meets the eye with the interpolation result array.
+The interpolation functions described below all return an *interpolation model*
+that can be passed to other functions which make use of the sampling capability.
 
-The interpolation result is also a *function* which can be used to sample values
-between the control points. The interpolation result can be passed to other functions
-which make use of the sampling capability.
+On its own the interpolation model returns an array containing predictions for each of the
+control points. This is useful in the case `loess` interpolation which first smooths the control points
+and then interpolates the smoothed points. All other interpolation function simply return the original
+control points because interpolation predicts a curve that passes through the original control points.
 
 There are different algorithms for interpolation that will result in different predictions
 along the curve. The math expressions library currently supports the following
@@ -48,14 +45,34 @@ and form a smooth curve between control points.
 * `loess`: Loess interpolation first performs a non-linear local regression to smooth the original
 control points. Then a spline is used to interpolate the smoothed control points.
 
-=== Prediction
+=== Upsampling
 
-The `lerp` function performs linear interpolation.
-Linear interpolation draws a straight between control points.
+Interpolation can be used to increase the sampling rate along a curve. One example
+of this would be to take a time series with samples every minute and create a data set with
+samples every second. In order to do this the data points between the minutes must be created.
+
+The `predict` function can be used to predict values anywhere within the bounds of the interpolation
+range.  The example below shows a very simple example of upsampling.
+
+In the example linear interpolation is performed on the arrays in variables *x* and *y*. The *x* variable,
+which is the x axis, is a sequence from 0 to 20 with a stride of 2. The *y* variable defines the curve
+along the x axis.
+
+The `lerp` function performs the interpolation and returns the interpolation model.
+
+The `u` value is an array from 0 to 20 with a stride of 1. This fills in the gaps of the original x axis.
+The `predict` function then uses the interpolation function in variable *l* to predict values for
+every point in the array assigned to variable *u*.
+
+The variable *p* is the array of predictions, which is the upsampled set of y values.
 
 [source,text]
 ----
-
+let(x=array(0, 2,  4,  6,  8,   10, 12,  14, 16, 18, 20),
+    y=array(5, 10, 60, 190, 100, 130, 100, 20, 30, 10, 5),
+    l=lerp(x, y),
+    u=array(0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20),
+    p=predict(l, u))
 ----
 
 When this expression is sent to the /stream handler it
@@ -63,10 +80,44 @@ responds with:
 
 [source,json]
 ----
-
+{
+  "result-set": {
+    "docs": [
+      {
+        "g": [
+          5,
+          7.5,
+          10,
+          35,
+          60,
+          125,
+          190,
+          145,
+          100,
+          115,
+          130,
+          115,
+          100,
+          60,
+          20,
+          25,
+          30,
+          20,
+          10,
+          7.5,
+          5
+        ]
+      },
+      {
+        "EOF": true,
+        "RESPONSE_TIME": 0
+      }
+    ]
+  }
+}
 ----
 
-
+=== Smoothing
 
 
 == Derivatives
